# BlockedBunchKaufmanLDLT

./: .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md
include/: aligned_buffer.h  block.h  block_ldlt_decomposition.h  block_matrix.h  kernels.h  matrix.h  regular_matrix.h
include/naive_block_ldlt/: block_ldlt_decomposition.h  block_matrix.h  kernels.h  regular_matrix.h
scripts/: run_cpp_tests.sh
src/: block_ldlt_decomposition.cc  block_matrix.cc  kernels.cc  regular_matrix.cc
tests/: block_ldlt_decomposition_test.cc  block_ldlt_large_stress_test.cc
